# scylladb-experiments

./: fts-presentation.md
fts-demo/: README.md  demo-errors.md  demo-m1.md  demo-m2.md  demo-m3.md  demo.md  fts-presentation.md
fts-demo/cql/: 00_teardown.cql  01_keyspace.cql  02_tables.cql  03_index_fts.cql  04_seed_data.cql  data_seed.cql  data_seed_m1.cql
fts-demo/cql/scenarios/m1/: 01_global_search.cql  02_exact_phrase.cql  03_relevance_ranking.cql  04_boolean_and.cql  05_boolean_or.cql  06_boolean_not.cql  07_boolean_mixed.cql  08_case_folding.cql  09_stop_words.cql  10_punctuation.cql
fts-demo/cql/scenarios/m2/: 01_filter_by_author.cql  02_restrict_by_id.cql
fts-demo/cql/scenarios/m3/: 01_fuzzy_match.cql  02_prefix_wildcard.cql
rust-cdc-test/: Cargo.toml
rust-cdc-test/src/: main.rs
rust-cql/: Cargo.toml
rust-cql/src/: main.rs
search-demo/: README.md
search-demo/cql/: 01_keyspace.cql  02_tables.cql  04_seed_data.cql  99_teardown.cql
search-demo/cql/fts/: 03_index_fts.cql  query_rules.cql
search-demo/cql/fts/m1/: 01_global_search.cql  02_exact_phrase.cql  03_relevance_ranking.cql  04_boolean_and.cql  05_boolean_or.cql  (+5 more)
search-demo/cql/vector/: 03_index_vector.cql  scenarios_vector.cql
search-demo/docs/: architecture.md  capability-matrix.md  run-of-show.md  verification.md
vs-demo/: README.md
vs-demo/cql/: 00_teardown.cql  01_keyspace.cql  02_tables.cql  03_index_vector.cql  04_seed_data.cql
vs-demo/cql/scenarios/: 01_plants_and_sunlight.cql  02_gas_giants.cql  03_clean_energy.cql  04_african_wildlife.cql
vs-demo/tools/: gen_seed.py
(+6 files in other folders)
